fix settings switch visibility

--- a/html/css/clock.css
+++ b/html/css/clock.css
@@ -388,7 +388,6 @@
 }
 
 .switch {
-    visibility: hidden;
     position: absolute;
     margin-left: -9999px;
 }
